--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-project-taiwind",
+  "name": "my-project-tailwind",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,11 +13,23 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "bootstrap": "^5.3.0-alpha1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "mongoose": "^6.9.1",
     "next": "13.1.2",
+    "next-pwa": "^5.6.0",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-icons": "^4.7.1",
+    "react-multi-carousel": "^2.8.2",
+    "typescript": "4.9.4",
+    "yarn": "^1.22.19"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
